* Fixed min/max stacking for (0,0) pixel (#1810)
* Fixed crash when using noise weights in stacking if overlap normalization was selected (#1816)
* Fixed using reference image position and updating WCS in Export Sequence (#1824)
* Fixed issue with deconvolution using RGB PSFs (#1829)
* Fixed issue where sirilpy.SirilInterface.confirm_messsagebox() could hang Siril (#1832)

**Improvements**
* Support arbitrary script categories in the GtkTreeView in script preferences
* Make ONNXHelper slightly more robust (!940)
* Enabled compiler optimizations by inlining many common data conversion functions (!942)
* Use descreening instead of subtraction to generate starnet starmask, for better integration with recomposition tool (!941)
* Added prefix arg to SirilInterface.set_seq_frame_pixeldata() to make it easier to create new sequences
* SirilInterface.get_siril_selection() now works if an image or sequence is loaded, not only an image
* Starlink pre- and post-autostretch is unlinked for better star removal from images with very uneven channels (!952)
* Stacking with rejection: make sure pixels with non-null values but 0 weight are now discarded at rejection step (!953)
* Add SirilInterface.save_image_to_file() method to save from python to FITS files without needing numpy (!955)

siril 1.4.0-beta4
09/28/25

**Fixes:**
* Fixed incomplete implementation of shared memory bugfix from beta3 (#1719)
* Fixed type hinting in get_seq_frame_header to work with python 3.11 and earlier (scripts #13)
* Fixed a deadlock in the `reloadscripts` command
* Fixed crash with openCV >= 4.12 (#1722, #1723)
* Fixed issue where cold and hot pixels estimation were neve updated (#1724)
* Fixed issue with the way python retrieves the current filename (this could omit the extension in some situations)
* Fixed problems extracting metadata from FITSEQ sequences (#1718, #1720, !915)
* Fixed an issue where an incorrect colourspace transform could be applied when saving a32-bit TIFF (#1730)